sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:2: error: ';' expected but '[' found.
Pour tout i dans [lgr-2,0] (parcours du plus grand au plus petit)
                 ^AlgBubbleSort3:3: error: ';' expected but '[' found.
       Pour tout j dans [0, i]
                        ^AlgBubbleSort3:4: error: ';' expected but ',' found.
          Si les cases j et j+1 doivent être inversées, le faire
                                                      ^AlgBubbleSort3:5: error: ';' expected but symbol literal found.
       Si le parcours sur les j n'a rien inversé, casser la boucle
                                 ^