sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
Pour tout i dans [lgr-2,0] (parcours du plus grand au plus petit)
       Pour tout j dans [0, i]
          Si les cases j et j+1 doivent être inversées, le faire
       Si le parcours sur les j n'a rien inversé, casser la boucle



def bubbleSort3() {
for (i<-getNombreValeurs()-2 to 0 by -1) {
	for (j<-0 to i) {
		if (plusPetit (j+1,j)){
			echange(j,j+1)
		} else { () }
	}
}
}
